get users by filter
