# endpoints/00-domain/src/main/scala/ptpger/domain/args/users/UserFilters.scala
@@ -1,0 +1,12 @@
+package ptpger.domain
+package args.users
+
+import io.circe.generic.JsonCodec
+
+import ptpger.domain.enums.UserEmployment
+
+@JsonCodec
+case class UserFilters(
+    id: Option[PersonId] = None,
+    employment: Option[UserEmployment] = None,
+  )
