# endpoints/00-domain/src/main/scala/ptpger/domain/enums/UserEmployment.scala
@@ -1,0 +1,12 @@
+package ptpger.domain.enums
+
+import enumeratum.EnumEntry.Snakecase
+import enumeratum._
+import eu.timepit.refined.types.string.NonEmptyString
+
+sealed trait UserEmployment extends Snakecase
+object UserEmployment extends Enum[UserEmployment] with CirceEnum[UserEmployment] {
+  case object Employed extends UserEmployment
+  case object Unemployed extends UserEmployment
+  override def values: IndexedSeq[UserEmployment] = findValues
+}
