# endpoints/01-repos/src/main/scala/ptpger/repos/UsersRepository.scala
@@ -9,12 +9,14 @@ import uz.scala.skunk.syntax.all.skunkSyntaxQueryOps
 import ptpger.Phone
 import ptpger.domain.AuthedUser.User
 import ptpger.domain.PersonId
+import ptpger.domain.args.users.UserFilters
 import ptpger.domain.auth.AccessCredentials
 import ptpger.repos.sql.UsersSql
 trait UsersRepository[F[_]] {
   def find(phone: Phone): F[Option[AccessCredentials[User]]]
   def create(userAndHash: AccessCredentials[User]): F[Unit]
   def findById(id: PersonId): F[Option[User]]
+  def get(filters: UserFilters): F[List[User]]
 }
 
 object UsersRepository {
@@ -30,5 +32,9 @@ object UsersRepository {
 
     override def findById(id: PersonId): F[Option[User]] =
       UsersSql.findById.queryOption(id)
+    override def get(filters: UserFilters): F[List[User]] = {
+      val af = UsersSql.select(filters)
+      af.fragment.query(UsersSql.codec).queryList(af.argument)
+    }
   }
 }
