# endpoints/01-repos/src/main/scala/ptpger/repos/sql/UsersSql.scala
@@ -3,14 +3,17 @@ package ptpger.repos.sql
 import shapeless.HNil
 import skunk._
 import skunk.implicits._
+import uz.scala.skunk.syntax.all.skunkSyntaxFragmentOps
 
 import ptpger.Phone
 import ptpger.domain.AuthedUser.User
 import ptpger.domain.PersonId
+import ptpger.domain.args.users.UserFilters
 import ptpger.domain.auth.AccessCredentials
+import ptpger.domain.enums.UserEmployment
 
 private[repos] object UsersSql extends Sql[PersonId] {
-  private val codec = (id *: zonedDateTime *: nes *: nes *: role *: phone).to[User]
+  private[repos] val codec = (id *: zonedDateTime *: nes *: nes *: role *: phone).to[User]
   private val accessCredentialsDecoder: Decoder[AccessCredentials[User]] =
     (codec *: passwordHash).map {
       case user *: hash *: HNil =>
@@ -35,4 +38,23 @@ private[repos] object UsersSql extends Sql[PersonId] {
         u.data.id *: u.data.createdAt *: u.data.firstname *: u.data.lastname *: u.data.role *:
           u.data.phone *: u.password *: EmptyTuple
       }
+
+  private def searchFilter(filters: UserFilters): List[Option[AppliedFragment]] =
+    List(
+      filters.id.map(sql"u.id = $id"),
+      filters.employment.map {
+        case UserEmployment.Employed =>
+          sql"t.user_id IS NOT NULL".apply(Void)
+        case UserEmployment.Unemployed =>
+          sql"t.user_id IS NULL".apply(Void)
+      },
+    )
+
+  def select(filters: UserFilters): AppliedFragment = {
+    val baseQuery: Fragment[Void] =
+      sql"""SELECT DISTINCT ON(u.id) u.id, u.created_at, u.firstname, u.lastname, u.role, phone FROM users u
+           LEFT JOIN tasks t on t.user_id = u.id or t.user_id IS NULL
+         """
+    baseQuery(Void).whereAndOpt(searchFilter(filters))
+  }
 }
