# endpoints/02-core/src/main/scala/ptpger/algebras/UsersAlgebra.scala
@@ -1,0 +1,16 @@
+package ptpger.algebras
+
+import ptpger.domain.AuthedUser.User
+import ptpger.domain.args.users.UserFilters
+import ptpger.repos.UsersRepository
+
+trait UsersAlgebra[F[_]] {
+  def get(filters: UserFilters): F[List[User]]
+}
+object UsersAlgebra {
+  def make[F[_]](usersRepository: UsersRepository[F]): UsersAlgebra[F] =
+    new UsersAlgebra[F] {
+      override def get(filters: UserFilters): F[List[User]] =
+        usersRepository.get(filters)
+    }
+}
